client/src/app/weather-card-today/weather-card-today.component.css
@import "~bootstrap/dist/css/bootstrap.css";
@import url(http://db.onlinewebfonts.com/c/b2e75c336df191233b3096682c9ee6be?family=PixelarRegularW01-Regular);
@import url(https://db.onlinewebfonts.com/c/b2e75c336df191233b3096682c9ee6be?family=PixelarRegularW01-Regular);
.pixel-font{
  font-family: PixelarRegularW01-Regular;
}
.bg-rain {
  background: url(https://thumbs.gfycat.com/QueasyRecentEmperorshrimp-size_restricted.gif);
  width: 100%;
  height: 100vh;
  background-size: cover;
}
.bg-sun {
  background: url(https://i.redd.it/0gjs15p02jp51.png);
  width: 100%;
  height: 100vh;
  background-size: cover;
}
.bg-snow {
  background: url(https://i.redd.it/ii6ml342b1541.gif);
  width: 100%;
  height: 100vh;
  background-size: cover;
}
.bg-missing {
  background: url(https://i.pinimg.com/originals/c3/a5/e2/c3a5e24b3b3119903eb0f6e8ca63edba.png);
  width: 100%;
  height: 100vh;
  background-size: cover;
}
.card-container {
  position: absolute;
  width: 700px;
  top: 55%;
  float: left;
  height: 350px;
  left: 50%;
  transform: translate(-50%, -50%);
}

.card {
  width: 100%;
  height: 100%;
  position: absolute;
  background: rgba(0, 0, 0, 0.4);
  backdrop-filter: blur(5px);
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.text-container {
  margin: 10px;
  font-size: 20px;
}

.location {
  text-align: center;
  font-size: 38px;
  color: white;
  margin-top: -15px;
}
.temperature {
  position: absolute;
  white-space: nowrap;
  font-size: 36px;
  color: white;
  margin-left: 10px;
  margin-top: 1px;
  width: 15%;
  padding: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  background-color: darkslateblue;
}
form {
  position: absolute;
  margin-top: 2px;
  margin-left: 125px;
  color: white;
  width: 50px;
  padding: 3px;
  border-style: outset;
}
.progress-wrapper {
  margin-top: 130px;
}
.progress span{
  text-align: right;
  color: black;
  font-size: 18px;
}
.progress-bar {
  border-right: 3px solid black;
}
.date {
  text-align: right;
  color: white;
  white-space: nowrap;
  font-size: 24px;
}
.progress {
  height: 10px;
}
.twelveAM {
  font-size: 20px;
  color: antiquewhite;
  margin-top: -50px;
}
#twelveAM-bar {
  border-left: 2px solid darkgray;
  height: 10px;
  margin-top: -1px;
}
.threeAM {
  margin-top: -28px;
  margin-left: 11%;
  font-size: 20px;
  color: antiquewhite;
}
#threeAM-bar {
  margin-left: 12.5%;
  border-left: 2px solid darkgray;
  height: 10px;
  margin-top: -1px;
}
.sixAM {
  margin-top: -27px;
  margin-left: 23.5%;
  font-size: 20px;
  color: antiquewhite;
}
#sixAM-bar {
  margin-left: 25%;
  border-left: 2px solid darkgray;
  height: 10px;
  margin-top: -1px;
}
.nineAM {
  margin-top: -28px;
  margin-left: 36%;
  font-size: 20px;
  color: antiquewhite;
}
#nineAM-bar {
  margin-left: 37.5%;
  border-left: 2px solid darkgray;
  height: 10px;
  margin-top: -1px;
}
.twelvePM {
  margin-top: -28px;
  margin-left: 48%;
  font-size: 20px;
  color: antiquewhite;
}
#twelvePM-bar {
  margin-left: 50%;
  border-left: 2px solid darkgray;
  height: 10px;
  margin-top: -1px;
}
.threePM {
  margin-top: -27px;
  margin-left: 61%;
  font-size: 20px;
  color: antiquewhite;
}
#threePM-bar {
  margin-left: 62.5%;
  border-left: 2px solid darkgray;
  height: 10px;
  margin-top: -1px;
}
.sixPM {
  margin-top: -28px;
  margin-left: 73.5%;
  font-size: 20px;
  color: antiquewhite;
}
#sixPM-bar {
  margin-left: 75%;
  border-left: 2px solid darkgray;
  height: 10px;
  margin-top: -1px;
}
.ninePM {
  margin-top: -28px;
  margin-left: 86%;
  font-size: 20px;
  color: antiquewhite;
}
#ninePM-bar {
  margin-left: 87.5%;
  border-left: 2px solid darkgray;
  height: 10px;
  margin-top: -1px;
}
.twelveAM-2 {
  margin-top: -27px;
  margin-left: 95.5%;
  font-size: 20px;
  color: lightgrey;
  white-space: nowrap;
}
#twelveAM-bar-2 {
  margin-left: 99.7%;
  border-left: 2px solid darkgray;
  height: 10px;
  margin-top: -1px;
}
.weather-img {
  position: absolute;
  margin-left: 78%;
  margin-top: 20px;
  border-radius: 5px;
  background: lightblue;
  width: 120px;
  height: 120px;
}
.weather-img-night {
  position: absolute;
  margin-left: 70%;
  margin-top: 32px;
  background: darkslateblue;
  height: 120px;
  width: 120px;
}
.future-hours {
  margin-left: 2.5%;
  width: 95%;
  margin-top: 25px;
  height: 30%;
  overflow: auto;
  white-space: nowrap;
  color: antiquewhite;
  overflow-y: hidden;
}
::-webkit-scrollbar {
  width: 18px;
  background-color: #F5F5F5;
}
::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  border-radius: 10px;
  background-color: lightgray;
}
::-webkit-scrollbar-thumb {
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
  background-color: rebeccapurple;
}
.hours {
  width: 200px;
  display: inline-block;
  height: 100%;
  background: rgba(0,0,0,0.25);
  margin-right: 5px;
}
.head {
  display: block;
  width: 200px;
  text-align: center;
  font-size: 20px;
}
.hour-temp {
  font-size: 30px;
  margin-left: 12px;
}
.weather-img-small{
  width: 65px;
  height: 65px;
  margin-top: -30px;
  margin-left: 135px;
}
.weather-img-small-night{
  width: 65px;
  height: 65px;
  margin-top: -30px;
  margin-left: 135px;
}
.short-forecast {
  display: block;
  text-align: center;
  font-size: 16px;
  margin-left: 5px;
  margin-right: 5px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.long-forecast{
  position: absolute;
  width: 100%;
  margin-top: 55px;
  text-align: center;
  color: white;
  font-size: 24px;
}
form {
  margin-top: -100px;
  margin-left: 600px;
  border: none;
}
input[type=text] {
  position: absolute;
  width: 250px;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}
#search-label {
  font-size: 30px;
  margin-left: -70px;
  margin-top: 11px;
  text-align: right;
  clear: both;
  float:left;
  margin-right:15px;
}
#error-label {
  position: absolute;
  width: 250px;
  font-size: 20px;
  color: darkred;
  margin-top: 50px;
  margin-left: 2px;
}
mat-spinner {
  position: absolute;
  margin-left: 4200px;
  margin-top: -375px;
  zoom: 0.2;
}

